--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    {% extends 'base.html' %}
+    {% extends '/var/www/blogapp/templates/base.html' %}
 
     <meta charset="UTF-8">
     <title></title>
