--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-   
+
 
     <meta charset="UTF-8">
     <title></title>
 </head>
 <body>
 
+    <h1>I love you Aryn!</h1>
 
 </body>
 </html>
