--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-
+    {% include 'base.html' %}
 
     <meta charset="UTF-8">
     <title></title>
 </head>
 <body>
 
-    <h1>I love you Aryn!</h1>
 
 </body>
 </html>
