extending base template

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    {% extends 'base.html' %}
+    {% extend 'base.html' %}
 
     <meta charset="UTF-8">
     <title></title>
