added site layout and design with new homepage layout and css classes.

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,8 +7,11 @@
     <title></title>
 </head>
 <body>
-
-    <h1>I Love Aryn!</h1>
-
+   {% block content %}
+        <h1>I Love Aryn!</h1>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/O1KW3ZkLtuo" frameborder="0" allowfullscreen></iframe>
+        </div>
+   {% endblock %}
 </body>
 </html>
