--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     <link href="{% static 'DataTables/media/css/jquery.dataTables.css' %}" rel="stylesheet" media="screen">
     <link href="{% static 'DataTables/extensions/TableTools/css/dataTables.tableTools.min.css' %}" rel="stylesheet" media="screen">
     <link href="{% static 'amCharts/amcharts/plugins/export/export.css' %}" rel="stylesheet" media="screen">
+    <link href="{% static 'social-icons/css/socialicious.css' %}" rel="stylesheet" media="screen">
+    <link href="{% static 'style.css' %}" rel="stylesheet" media="screen">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -17,11 +19,12 @@
 
 
     {% include 'navbar.html' %}
-
-    <div class="container">
-        {% block content %}
-        {% endblock %}
+    <div id="content" class="content-holder">
+        <div class="container">
+            {% block content %}
+            {% endblock %}
+        </div>
     </div>
-
+    {% include 'footer.html' %}
 </body>
 </html>
