--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,36 +4,41 @@
 
     <meta charset="UTF-8">
     <title>michaeldoranjr</title>
+    <script src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript">
+        google.load('search', '1');
+        google.setOnLoadCallback(function(){
+          new google.search.CustomSearchControl().draw('cse');
+        }, true);
+    </script>
+
 </head>
 <body>
 {% block nav %}
-<nav class="navbar navbar-default light-harvesting-tool-nav" role="navigation">
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse"
-                data-target="#example-navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="">michaeldoranjr.com</a>
-    </div>
-    <div class="collapse navbar-collapse" id="example-navbar-collapse">
-        <ul class="nav navbar-nav">
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    Something<b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a href="">Somethings</a></li>
-                    <li><a href="">Somethings</a></li>
-                    <li><a href="">Somethings</a></li>
-                    <li><a href="">Somethings</a></li>
+<div class="container">
+    <div id="top" class="navbar navbar-static-top site-nav" role="banner">
+        <div class="container">
+            <nav class="navbar navbar-default site-nav" role="navigation">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse"
+                            data-target="#example-navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="">michaeldoranjr.com</a>
+                </div>
+                <div class="nav navbar-nav site-search site-nav" id="cse" ></div>
+                <ul class="nav navbar-nav">
+                    <li><a class="nav navbar-nav" href="">Blog</a></li>
+                    <li><a class="nav navbar-nav" href="">Portfolio</a></li>
+                    <li><a class="nav navbar-nav" href="">About</a></li>
                 </ul>
-            </li>
-        </ul>
+            </nav>
+        </div>
     </div>
-</nav>
+</div>
 {% endblock %}
 </body>
 </html>
