added blog page along with log-in/out functionality.  Can now add and view new posts

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="nav navbar-nav site-search site-nav" id="cse" ></div>
                 <ul class="nav navbar-nav">
-                    <li><a class="nav navbar-nav" href="">Blog</a></li>
+                    <li><a class="nav navbar-nav" href="{% url 'blog' %}">Blog</a></li>
                     <li><a class="nav navbar-nav" href="">Portfolio</a></li>
                     <li><a class="nav navbar-nav" href="">About</a></li>
                 </ul>
