--- a/home/templates/home/add_post.html
+++ b/home/templates/home/add_post.html
@@ -1,10 +1,20 @@
-<h2>Hello {{ user.username }}</h2>
-<br />
-<h2>Add new post</h2>
-<form action="" method="POST">
-    {% csrf_token %}
-    <table>
-        {{ form.as_table }}
-    </table>
-    <input type="submit" name="add" value="Add" />
-</form>
+{% extends 'base.html' %}
+
+{% block content %}
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <h2>Hello {{ user.username }}</h2>
+            <br />
+            <h2>Add new post</h2>
+            <form action="" method="POST">
+                {% csrf_token %}
+                <table>
+                    {{ form.as_table }}
+                </table>
+                <input type="submit" name="add" value="Add" />
+            </form>
+        </div>
+    </div>
+</div>
+{% endblock %}
